--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -65,3 +65,20 @@ header h1 {
 .link-btn:hover {
   background: #c26484;
 }
+
+.icons {
+  position: absolute;
+  top: 1rem;
+  right: 3rem;
+  display: flex;
+  gap: 2rem;
+}
+
+.icons a {
+  text-decoration: none;
+}
+
+.icon {
+  font-size: 3rem;
+  cursor: pointer;
+}
