--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -11,6 +11,10 @@ body {
   min-height: 100vh;
 }
 
+a {
+  text-decoration: none;
+}
+
 .overlay {
   /* background-color: rgba(255, 255, 255, 0.8); */
   min-height: 100vh;
