--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,15 +5,23 @@
 }
 
 body {
-  font-family: 'Inria Serif', serif;
-  background: linear-gradient(to bottom, #f8a5c2, #fff);
+  font-family: "Inria Serif", serif;
+  background-image: url("../images/home-bg.png");
+  background-repeat: no-repeat, no-repeat;
+  background-position: center top, center center; /* gradient, image */
+  background-attachment: scroll, fixed;
+  background-size: 100% auto, cover; /* gradient, image */
   color: #5e2c3c;
   overflow-x: hidden;
 }
 
+a {
+  text-decoration: none;
+}
+
 .header {
   position: relative;
-  background-color: #f8a5c2;
+  /* background-color: #f8a5c2; */
   padding: 1rem;
   text-align: center;
 }
@@ -49,15 +57,17 @@ body {
 }
 
 .icon {
-  font-size: 3rem;
+  height: 2.5rem;
+  width: 2.5rem;
   cursor: pointer;
+  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.2));
 }
 
 .drip {
   position: absolute;
   top: 0;
   left: 0;
-  background: url('../images/drip.png') no-repeat;
+  background: url("../images/drip.png") no-repeat;
   background-size: contain;
   width: 50vh;
   height: 30vh;
@@ -65,7 +75,7 @@ body {
 
 .collections {
   padding: 2rem 1rem;
-  background: #f8a5c2;
+  /* background: #f8a5c2; */
 }
 
 .collection h2 {
@@ -76,7 +86,7 @@ body {
 .gallery-container {
   overflow-x: auto;
   padding-bottom: 1rem;
-  -ms-overflow-style: none;  /* IE and Edge */
+  -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none;
 }
 
@@ -87,11 +97,12 @@ body {
 }
 
 .card {
-  background: white;
+  /* background-color: #d07b91; */
   border-radius: 10px;
   overflow: hidden;
-  width: 180px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  width: 29vh;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  /* height: 30vh; */
 }
 
 .card img {
@@ -101,10 +112,10 @@ body {
 }
 
 .card-footer {
+  background-color: #d07b91;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem;
   background-color: inherit;
 }
 
@@ -113,9 +124,12 @@ body {
   border: none;
   color: white;
   padding: 0.3rem 0.6rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   border-radius: 5px;
   font-size: 0.8rem;
   cursor: pointer;
+  width: 100%;
 }
 
 .heart {
