--- a/static/css/login.css
+++ b/static/css/login.css
@@ -18,7 +18,7 @@ body {
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
+h2, h3 {
   text-align: center;
   margin-bottom: 30px;
   color: #b44666;
