--- a/static/css/products.css
+++ b/static/css/products.css
@@ -98,3 +98,20 @@ header h1 {
 .remove-btn:hover {
   background: #ef4444;
 }
+
+.icons {
+  position: absolute;
+  top: 1rem;
+  right: 3rem;
+  display: flex;
+  gap: 2rem;
+}
+
+.icons a {
+  text-decoration: none;
+}
+
+.icon {
+  font-size: 3rem;
+  cursor: pointer;
+}
